hphp/test/zend/good/ext/pdo/tests/pdorow.php.expectf

Fatal error: Failure to resolve undefined class PDORow in %s/pdorow.php on line 3
